--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "hash-router": "^0.4.0",
+    "json-server": "^0.17.0",
     "nodemon": "^2.0.20",
     "nodeom": "^0.0.1",
     "react": "^18.2.0",
